# advent-of-code-2025

./: .gitignore  Cargo.toml  README.md
benches/: adventofcode2025.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs
day1/: Cargo.toml
day1/src/: main.rs
day2/src/: main.rs
input/day1/: test_input.txt
src/: lib.rs  main.rs  utils.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs
src/utils/: load_input.rs
