[package]
name = "adventofcode2025"
version = "0.1.0"
authors = ["Markus Fruhmann"]
edition = "2024"

[profile.bench]
debug = true

[[bench]]
name = "day01"
harness = false

[[bench]]
name = "day02"
harness = false

[[bench]]
name = "day03"
harness = false

[[bench]]
name = "day04"
harness = false

[[bench]]
name = "day05"
harness = false

[[bench]]
name = "day06"
harness = false

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
itertools = "0.14.0"

[dev-dependencies]
criterion = "0.8.0"
